--- a/changelog
+++ b/changelog
@@ -1,6 +1,6 @@
 turnkey-asp-net-apache-12.1 (1) turnkey; urgency=low
 
-  * Latest versions of all components will be installed at build time.
+  * Latest Debian Squeeze package versions of all components.
 
   * Note: Please refer to turnkey-core's changelog for changes common to all
     appliances. Here we only describe changes specific to this appliance.
