--- a/changelog
+++ b/changelog
@@ -1,3 +1,16 @@
+turnkey-asp-net-apache-14.0 (1) turnkey; urgency=low
+
+  * Latest Debian Jessie package versions of all components.
+
+  * libapache2-mod-mono is now installed from upstream APT source.
+
+  * Updated from mono-server2 to mono-server4.
+
+  * Note: Please refer to turnkey-core's changelog for changes common to all
+    appliances. Here we only describe changes specific to this appliance.
+
+ -- Anton Pyrogovskyi <q@dae.pp.ua>  Fri, 10 Jul 2015 18:55:01 +0300
+
 turnkey-asp-net-apache-13.0 (1) turnkey; urgency=low
 
   * Latest Debian Wheezy package versions of all components.
