--- a/changelog
+++ b/changelog
@@ -6,6 +6,8 @@ turnkey-asp-net-apache-14.0 (1) turnkey; urgency=low
 
   * Updated from mono-server2 to mono-server4.
 
+  * Hardened default SSL settings
+  
   * Note: Please refer to turnkey-core's changelog for changes common to all
     appliances. Here we only describe changes specific to this appliance.
 
