--- a/changelog
+++ b/changelog
@@ -1,3 +1,12 @@
+turnkey-asp-net-apache-14.2 (1) turnkey; urgency=low
+
+  * Latest Debian Jessie package versions of all components.
+
+  * Note: Please refer to turnkey-core's changelog for changes common to all
+    appliances. Here we only describe changes specific to this appliance.
+
+ -- Anton Pyrogovskyi <anton@turnkeylinux.org>  Tue, 01 Nov 2016 21:53:40 +0000
+
 turnkey-asp-net-apache-14.1 (1) turnkey; urgency=low
 
   * Installed security updates.
