--- a/changelog
+++ b/changelog
@@ -4,10 +4,13 @@ turnkey-asp-net-apache-14.2 (1) turnkey; urgency=low
 
   * Latest Debian Jessie package versions of all components.
 
+  * Fixed asp.net examples not working [#829].
+    [Stefan Davis <stefan@turnkeylinux.org>]
+
   * Note: Please refer to turnkey-core's changelog for changes common to all
     appliances. Here we only describe changes specific to this appliance.
 
- -- Anton Pyrogovskyi <anton@turnkeylinux.org>  Mon, 01 May 2017 21:53:40 +0000
+ -- Anton Pyrogovskyi <anton@turnkeylinux.org>  Mon, 15 May 2017 21:53:40 +0000
 
 turnkey-asp-net-apache-14.1 (1) turnkey; urgency=low
 
