--- a/changelog
+++ b/changelog
@@ -2,7 +2,10 @@ turnkey-asp-net-apache-15.0 (1) turnkey; urgency=low
 
   * Update sources.list to use new Xamarin Stretch repo.
 
-  * Replaced Mysql with MariaDB
+  * Moved apt key to /usr/share/keyrings - security best practice (part of
+    #1033)
+
+  * Replaced MySQL with MariaDB
 
   * Known Issue regarding some examples, see
     https://github.com/turnkeylinux/tracker/issues/966 for more information.
@@ -10,7 +13,7 @@ turnkey-asp-net-apache-15.0 (1) turnkey; urgency=low
   * Note please refer to turnkey-core's changelog for changes common to all
     appliances. Here we only describe changes specific to this appliance.
 
- -- Stefan Davis <stefan@turnkeylinux.org>  Thu, 16 Nov 2017 00:41:38 +1100
+ -- Stefan Davis <stefan@turnkeylinux.org>  Mon, 30 Jul 2018 13:41:38 +1100
 
 turnkey-asp-net-apache-14.2 (1) turnkey; urgency=low
 
